# MAVC-Receiver

./: .gitignore  LICENSE  README.md  pyproject.toml
cfg_examples/: local_ca_cfg.yaml  receiver_cfg.yaml
examples/: raw_tcp_server.py
examples/cfg_examples/: local_ca_cfg.yaml  receiver_cfg.yaml
src/mavc_receiver/: __init__.py  cfg_parser.py  message.py  receiver.py
src/mavc_receiver/enum/: __init__.py  crl.py  wire.py
src/mavc_receiver/message/: command.py
src/mavc_receiver/security/: cfg_parser.py  local_ca.py  setup.py  utils.py
src/mavc_receiver/security/core/: ca.py  client.py  crl.py  server.py
src/mavc_receiver/wire/: command.py  command_parser.py  parser.py
